2004-07-22  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* system_main.c (main): print error message and exit for illegal
	option arguments.
	
	* system_screenshot.c (get_screenshot_name): make directories used
	configurable, allow use of file name rather than ROM name to
	derive file to use.
	
	* system_io.c (validate_dir): create all non-existing components
	of directory, not only last.

2004-07-22  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* NeoPop-SDL.mdoc: update.
	* neopoprc.mdoc: add.

2004-07-21  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* system_graphics.c (system_graphics_update), system_hq_intern.h,
	system_hq2x.c, system_hq2x.h, system_hq3x.c, system_hq3x.h: add
	HQ2x/HQ3x scaler (from scummvm).

2004-07-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>
	
	* system_screenshot.c (converter): use full range of 8bit colour
	components.

2004-07-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>
	
	* font.xpm, system_osd.h, system_main.c (system_VBL): add
	on-screen display.
	
	* system_main.c, system_sound.c: add pause support.

2004-07-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>
	
	* system_main.c (system_VBL): rewrite throttling code, when
	playing sound, sync on sound thread.
	* system_sound.c: rewrite to use ring buffer to pass audio chunks
	betweeen main thread and sound thread.
	
	* system_rom.c (rom_load), unzip.c, unzip.h: add support to load
	ROMs from zip archives.

	* system_io.c (system_state_load, system_state_save,
	system_io_flash_read, system_io_flash_write,
	system_make_file_name): make directories used configurable, allow
	use of ROM name rather than file name to derive file to use.
	
	* system_io.c (system_state_load, system_state_save): add support
	for 10 save slots.

	* system_graphics.c: add yuv overlay support, rewrite pixel format
	conversion and blocky scaling.

2004-07-07  Dieter Baron  <dillo@danbala.tuwien.ac.at>
	
	* Core/sound.c (sample_chip_tone, sample_chip_noise): don't
	compute voices that are not played.
