@@ -1,4 +1,4 @@
-/* $NiH: NeoPop-SDL.h,v 1.21 2004/07/22 12:25:08 dillo Exp $ */
+/* $NiH: NeoPop-SDL.h,v 1.22 2004/07/23 13:16:39 dillo Exp $ */
 /*
   NeoPop-SDL.h -- common header file
   Copyright (C) 2002-2004 Thomas Klausner and Dieter Baron
@@ -78,6 +78,7 @@ enum nprc {
     NPRC_LANGUAGE,
     NPRC_MAGNIFY,
     NPRC_MAP,
+    NPRC_OSD_COLOUR,
     NPRC_SAMPLERATE,
     NPRC_SCREENSHOT_DIR,
     NPRC_SMOOTH,
@@ -219,6 +220,7 @@ extern int use_rom_name;
 extern int state_slot;
 extern int fs_mode;
 extern int need_redraw;
+extern int osd_colour;
 
 extern Uint32 hqx_lookup[16*16*16];
 
