@@ -1,40 +1,50 @@
 /* XPM */
 static char * font_xpm[] = {
-"128 32 5 1",
-" 	c #000000",
-".	c #404040",
-"+	c #808080",
-"@	c #C0C0C0",
-"#	c #FFFFFF",
-"                                                                                                                                ",
-"           ##    ##  ##            #    ##   +#     #      ##     ####   ####                                                +# ",
-"           ##    #.  #.  ## ##  .#####@     +#+  .#####    #.    ##.       .##   +#+#+                                      +#+ ",
-"           ##           ####### ## # ..    +#+   ## #            ##         ##    +#+      ##                              +#+  ",
-"           ##            ## ##  .#####.   +#+    .####           ##         ##  #######  ######          ######           +#+   ",
-"           ##           ####### .. # ##  +#+     ## #            ##         ##    +#+      ##                            +#+    ",
-"                         ## ##  @#####. +#+      .#####          ##.       .##   +#+#+             ##                   +#+     ",
-"           ##                      #    #+   ##     #             ####   ####                      #.              ##   #+      ",
-"                                                                                                                                ",
-" #####     +#   @#####  @#####     +##  #######  #####@ #######  #####   #####                                            ####  ",
-"##   ##   +##   ..   ## ..   ##   +###  ##      ##   ..     +#+ ##   ## ##   ##                    +#+           +#+         ## ",
-"##   ##  +###        ##      ##  +#+##  ##      ##         +#+  ##. .## ##   ##                   +#+    ######   +#+        ## ",
-"##   ##    ##    #####    ####  +#+ ##  ######  ######    +#+    #####   ######    ##      ##    +#+               +#+      ##  ",
-"##   ##    ##   ##           ## #######      ## ##   ##  +#+    ##. .##      ##                   +#+    ######   +#+      ##   ",
-"##   ##    ##   ##      ..   ##     ##  ..   ## ##   ## +#+     ##   ## ..   ##            ##      +#+           +#+            ",
-" #####     ##   ####### @#####      ##  @#####   #####  #+       #####  @#####     ##      #.                              ##   ",
-"                                                                                                                                ",
-" #####   #####  ######   #####@ ######  ####### #######  #####@ ##   ##    ##        ## ##   ## ##      ##. .## ##.  ##  #####  ",
-"##   ## ##   ## ##   ## ##   .. ##   ## ##      ##      ##   .. ##   ##    ##        ## ##   ## ##      ###.### ###. ## ##   ## ",
-"## #### ##   ## ##  .## ##      ##   ## ##      ##      ##      ##   ##    ##        ## ##  .## ##      ####### ####.## ##   ## ",
-"##.# ## ####### ######  ##      ##   ## #####   #####   ##  ### #######    ##        ## ######  ##      ## # ## ##.#### ##   ## ",
-"##.#### ##   ## ##  .## ##      ##   ## ##      ##      ##   ## ##   ##    ##        ## ##  .## ##      ##   ## ## .### ##   ## ",
-"##   .. ##   ## ##   ## ##   .. ##   ## ##      ##      ##   ## ##   ##    ##        ## ##   ## ##      ##   ## ##  .## ##   ## ",
-" #####@ ##   ## ######   #####@ ######  ####### ##       ###### ##   ##    ##   @#####  ##   ## ####### ##   ## ##   ##  #####  ",
-"                                                                                                                                ",
-"######   #####  ######   #####@  ###### ##   ## ##   ## ##   ## ##   ## ##   ## #######  #####  #+       #####    +#+           ",
-"##   ## ##   ## ##   ## ##   ..    ##   ##   ## ##   ## ##   ## ##   ## ##   ##     +#+  ##     +#+         ##   +#+#+          ",
-"##   ## ##   ## ##  .## ##         ##   ##   ## ##   ## ##   ## ##. .## ##   ##    +#+   ##      +#+        ##                  ",
-"######  ##   ## ######   #####     ##   ##   ## ##   ## ## # ##  #####   ######   +#+    ##       +#+       ##                  ",
-"##      ##   ## ##  .##      ##    ##   ##   ## +#+ +#+ ####### ##. .##      ##  +#+     ##        +#+      ##                  ",
-"##      ##  .## ##   ## ..   ##    ##   ##   ##  +#+#+  ###.### ##   ## ..   ## +#+      ##         +#+     ##                  ",
-"##       ###### ##   ## @#####     ##    #####    +#+   ##. .## ##   ## @#####  #######  #####       +#  #####          ####### "};
+"144 36 11 1",
+" 	c None",
+".	c #000000",
+"+	c #008000",
+"@	c #00FF00",
+"#	c #00C000",
+"$	c #006000",
+"%	c #0000FF",
+"&	c #008080",
+"*	c #00C040",
+"=	c #0040C0",
+"-	c #00E020",
+".....    +@@+     +@@++@@+ ............+@+...+@@+..#@+...$@$.. +@@+     .$@@@@$  $@@@@$.  ................. ....     ........ ....     ......#@+",
+".....    @%%@     @%%@@%%@ .+@@+@@+..$@@%@@#$@%%@.#&%@.$@@%@@$ @%%@     $@%%%%@  @%%%%@$  ..#@#@#.......... ....     ........ ....     .....#&%@",
+".....    @%%@     @%*$@%*$ +@%%@%%@+$*%%%%%=#+@@+#&%&#$*%%%%%@ @%*+     @%%-@@$  $@@-%%@  .#&%&%&#...+@@+.. ....     ........ ....     ....#&%&#",
+".....    @%%@     +@$.+@$. @%%%%%%%@@%%@%@**$...#&%&#.@%%@%@@$ +@+.     @%%@...  ...@%%@  +@#&%&#@++@@%%@@+ ....     +@@@@@@+ ....     ...#&%&#.",
+".....    @%%@     ........ +@%%@%%@+$*%%%%%*$..#&%&#..$*%%%%@. ....     @%%@...  ...@%%@  @%%%%%%%@@%%%%%%@ ....     @%%%%%%@ ....     ..#&%&#..",
+".....    @%%@     ........ @%%%%%%%@$**@%@%%@.#&%&#...@%%@%@@$ ....     @%%@...  ...@%%@  +@#&%&#@++@@%%@@+ $@@$     +@@@@@@+ ....     .#&%&#...",
+".....    +@@+     ........ +@%%@%%@+#=%%%%%*$#&%&#+@@+$*%%%%%@ ....     @%%-@@$  $@@-%%@  .#&%&%&#...+@@+.. @%%@     ........ +@@+     #&%&#....",
+".....    @%%@     ........ .+@@+@@+.$#@@%@@$.@%&#.@%%@.$@@%@@$ ....     $@%%%%@  @%%%%@$  ..#@#@#.......... @%*$     ........ @%%@     @%&#.....",
+".....    +@@+     ........ ............+@+...+@#..+@@+...$@$.. ....     .$@@@@$  $@@@@$.  ................. $@$.     ........ +@@+     +@#......",
+".+@@@@@+.....#@+..$#@@@@@+.$#@@@@@+.....#@@+.+@@@@@@@+.+@@@@@#$+@@@@@@@+.+@@@@@+..+@@@@@+.....     ....     .......  ........ .......  +@@@@+.  ",
+"+@%%%%%@+...#&%@..#=%%%%%@+#=%%%%%@+...#&%%@.@%%%%%%%@+@%%%%%=#@%%%%%%%@+@%%%%%@++@%%%%%@+....     ....     ...#@#.  ........ .#@#...  @%%%%@+  ",
+"@%%-@-%%@..#&%%@..$**@@-%%@$**@@-%%@..#&%%%@.@%%@@@@@+@%%-@@**$+@@@@&%&#@%%-@-%%@@%%-@-%%@....     ....     ..#&%&#  +@@@@@@+ #&%&#..  +@@-%%@  ",
+"@%%@.@%%@.#&%%%@...+@@@-%%@..+@@-%%@.#&%&%%@.@%%@@@@+.@%%@@@@+....#&%&#.@%%-@-%%@@%%-@@%%@+@@+     +@@+     .#&%&#.  @%%%%%%@ .#&%&#.  ..+@%%@  ",
+"@%%@.@%%@...@%%@..+@%%%%%@+..@%%%%@+#&%&@%%@+@%%%%%%@+@%%%%%%@+..#&%&#..+@%%%%%@++@%%%%%%@@%%@     @%%@     #&%&#..  +@@@@@@+ ..#&%&#  .+@%%@+  ",
+"@%%@.@%%@...@%%@..@%%-@@@+...+@@-%%@@%%%%%%%@+@@@@-%%@@%%@@-%%@.#&%&#...@%%-@-%%@.+@@@-%%@+@@+     +@@+     .#&%&#.  @%%%%%%@ .#&%&#.  .@%%@+.  ",
+"@%%-@-%%@...@%%@..@%%@@@@@+$**@@-%%@+@@@@%%@+$**@@-%%@@%%-@-%%@#&%&#....@%%-@-%%@$**@@-%%@+@@+     @%%@     ..#&%&#  +@@@@@@+ #&%&#..  .+@@+..  ",
+"+@%%%%%@+...@%%@..@%%%%%%%@#=%%%%%@+....@%%@.#=%%%%%@++@%%%%%@+@%&#.....+@%%%%%@+#=%%%%%@+@%%@     @%*+     ...#@#.  ........ .#@#...  .@%%@..  ",
+".+@@@@@+....+@@+..+@@@@@@@+$#@@@@@+.....+@@+.$#@@@@@+..+@@@@@+.+@#.......+@@@@@+.$#@@@@@+.+@@+     +@+.     .......  ........ .......  .+@@+..  ",
+".+@@@@@+..+@@@@@+.+@@@@@@+..+@@@@@#$+@@@@@@+.+@@@@@@@++@@@@@@@+.+@@@@@#$+@@+.+@@++@@+     .....+@@++@@+.+@@++@@+.....+@@#.#@@++@@#.+@@+.+@@@@@+.",
+"+@%%%%%@++@%%%%%@+@%%%%%%@++@%%%%%=#@%%%%%%@+@%%%%%%%@@%%%%%%%@+@%%%%%=#@%%@.@%%@@%%@     .....@%%@@%%@.@%%@@%%@.....@%%*#*%%@@%%*#@%%@+@%%%%%@+",
+"@%%-@-%%@@%%-@-%%@@%%@@-%%@@%%-@@**$@%%@@-%%@@%%@@@@@+@%%@@@@@+@%%-@@**$@%%@.@%%@@%%@     .....@%%@@%%@.@%%@@%%@.....@%%%*%%%@@%%%*@%%@@%%-@-%%@",
+"@%%@%%%%@@%%@@@%%@@%%@@-%%@@%%@..$$.@%%@.@%%@@%%@@@+..@%%@@@+..@%%@+@@@+@%%@@@%%@@%%@     .....@%%@@%%@@-%%@@%%@.....@%%%%%%%@@%%%%*%%@@%%@.@%%@",
+"@%%*%@%%@@%%%%%%%@@%%%%%%@+@%%@.....@%%@.@%%@@%%%%%@..@%%%%%@..@%%@@%%%@@%%%%%%%@@%%@     .....@%%@@%%%%%%@+@%%@.....@%%@%@%%@@%%*%%%%@@%%@.@%%@",
+"@%%*%%%%@@%%@@@%%@@%%@@-%%@@%%@..$$.@%%@.@%%@@%%@@@+..@%%@@@+..@%%@+@%%@@%%@@@%%@@%%@     .....@%%@@%%@@-%%@@%%@.....@%%@@@%%@@%%@*%%%@@%%@.@%%@",
+"@%%-@@**$@%%@.@%%@@%%@@-%%@@%%-@@**$@%%@@-%%@@%%@@@@@+@%%@.....@%%-@@%%@@%%@.@%%@@%%@     $#@@@-%%@@%%@.@%%@@%%@@@@@+@%%@.@%%@@%%@#*%%@@%%-@-%%@",
+"+@%%%%%=#@%%@.@%%@@%%%%%%@++@%%%%%=#@%%%%%%@+@%%%%%%%@@%%@.....+@%%%%%%@@%%@.@%%@@%%@     #=%%%%%@+@%%@.@%%@@%%%%%%%@@%%@.@%%@@%%@.@%%@+@%%%%%@+",
+".+@@@@@#$+@@+.+@@++@@@@@@+..+@@@@@#$+@@@@@@+.+@@@@@@@++@@+......+@@@@@@++@@+.+@@++@@+     $#@@@@@+.+@@+.+@@++@@@@@@@++@@+.+@@++@@+.+@@+.+@@@@@+.",
+"+@@@@@@+..+@@@@@+.+@@@@@@+..+@@@@@#$+@@@@@@+ +@@+.+@@++@@+.+@@++@@+.+@@++@@+.+@@++@@+.+@@++@@@@@@@++@@@@@+  .@#......+@@@@@+  ..#@#..  .........",
+"@%%%%%%@++@%%%%%@+@%%%%%%@++@%%%%%=#@%%%%%%@ @%%@.@%%@@%%@.@%%@@%%@.@%%@@%%@.@%%@@%%@.@%%@@%%%%%%%@@%%%%%@  @%&#.....@%%%%%@  .#&%&#.  .........",
+"@%%@@-%%@@%%-@-%%@@%%@@-%%@@%%-@@**$+@@%%@@+ @%%@.@%%@@%%@.@%%@@%%@.@%%@@%%@.@%%@@%%@.@%%@+@@@@&%&#@%%@@@+  #&%&#....+@@@%%@  #&%&%&#  .........",
+"@%%@@-%%@@%%@.@%%@@%%@@-%%@@%%-@@@+...@%%@.. @%%@.@%%@@%%@.@%%@@%%@@@%%@@%%-@-%%@@%%-@@%%@...#&%&#.@%%@...  .#&%&#......@%%@  .#@#@#.  .........",
+"@%%%%%%@+@%%@.@%%@@%%%%%%@++@%%%%%@+..@%%@.. @%%@.@%%@@%%@.@%%@@%%@%@%%@+@%%%%%@++@%%%%%%@..#&%&#..@%%@...  ..#&%&#.....@%%@  .......  .........",
+"@%%@@@@+.@%%@.@%%@@%%@@@%%@.+@@@-%%@..@%%@.. @%%@.@%%@#&%&#&%&#@%%%%%%%@@%%-@-%%@.+@@@@%%@.#&%&#...@%%@...  ...#&%&#....@%%@  .......  .........",
+"@%%@.....@%%-@@%%@@%%@.@%%@$**@@-%%@..@%%@.. @%%-@-%%@.#&%&%&#.@%%%*%%%@@%%@.@%%@$**@@-%%@#&%&@@@@+@%%@@@+  ....#&%&#+@@@%%@  .......  +@@@@@@@+",
+"@%%@.....+@%%%%%%@@%%@.@%%@#=%%%%%@+..@%%@.. +@%%%%%@+..#&%&#..@%%*#*%%@@%%@.@%%@#=%%%%%@+@%%%%%%%@@%%%%%@  .....#&%@@%%%%%@  .......  @%%%%%%%@",
+"+@@+......+@@@@@@++@@+.+@@+$#@@@@@+...+@@+.. .+@@@@@+....#@#...+@@#.#@@++@@+.+@@+$#@@@@@+.+@@@@@@@++@@@@@+  ......#@.+@@@@@+  .......  +@@@@@@@+"};
