@@ -1,4 +1,4 @@
-.\" $NiH: neopoprc.mdoc,v 1.5 2004/07/22 10:31:19 dillo Exp $
+.\" $NiH: neopoprc.mdoc,v 1.6 2004/07/22 15:23:09 dillo Exp $
 .\"
 .\" Copyright (c) 2004 Thomas Klausner and Dieter Baron.
 .\" All rights reserved.
@@ -142,6 +142,10 @@ event to a key.
 For details, please see the
 .Sx BINDINGS
 section below.
+.It Dv osd-colour
+.Bq string
+Colour to use for on-screen display, in RGB with either one or two hex
+digits per colour component.  Default is white (fff).
 .It Dv samplerate
 .Bq int
 Sample rate at which to play audio.
