@@ -1,3 +1,11 @@
+2004-07-24  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* system_osd.c (osd_init, display_string, string_width),
+	system_main (main), system_rc (system_rc_read_file), font.xpm,
+	NeoPop-SDL.h, neopoprc.mdoc: use proportional font with black
+	border and transparent background.  make colour configurable via
+	config file.
+	
 2004-07-22  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* system_main.c (main): print error message and exit for illegal
